# ideajar

./: .gitignore  Dockerfile  run_be.sh
backend/: cleanup_users.py  main.py  pyproject.toml  test_main.py
backend/app/: db.py  main.py  models.py  users.py
backend/app/api/routers/: pitches.py  system.py
backend/migrations/: env.py
backend/migrations/versions/: 302230155e2e_add_username_to_users.py  ac0d371fd779_add_user_table.py  e30fd5f56e26_initial_migration.py
backend/tests/: test_main.py
frontend/: index.html  openapi.json  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  style.css
frontend/src/client/: index.ts
frontend/src/client/models/: Body_auth_jwt_login_api_auth_jwt_login_post.ts  Pitch.ts  PitchCreate.ts  UserCreate.ts  UserRead.ts  UserUpdate.ts  Vote.ts
frontend/src/client/services/: AuthService.ts  DefaultService.ts  PitchesService.ts  SystemService.ts  UsersService.ts
frontend/src/components/: AppHeader.vue  BaseCard.vue  CardStack.vue  NoMoreCard.vue  PitchCreationCard.vue  SidebarMenu.vue  SwipableCard.vue  SwipeParticles.vue
frontend/src/composables/: useCardSwipe.ts
frontend/src/constants/: errors.ts  validation.ts
frontend/src/router/: index.ts
frontend/src/views/: LoginPage.vue  RegisterPage.vue  SwipePage.vue
